Apache Tez Change Log
=====================


Release 0.8.0: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2048. Remove VertexManagerPluginContext.getTaskContainer()
  TEZ-2565. Consider scanning unfinished tasks in VertexImpl::constructStatistics to reduce merge overhead.
  TEZ-2468. Change the minimum Java version to Java 7.

ALL CHANGES:
  TEZ-2629. LimitExceededException in Tez client when DAG has exceeds the default max counters
  TEZ-2730. tez-api missing dependency on org.codehaus.jettison for json.
  TEZ-2719. Consider reducing logs in unordered fetcher with shared-fetch option
  TEZ-2646. Add scheduling casual dependency for attempts
  TEZ-2647. Add input causality dependency for attempts
  TEZ-2633. Allow VertexManagerPlugins to receive and report based on attempts
  instead of tasks
  TEZ-2650. Timing details on Vertex state changes
  TEZ-2699. Internalize strings in ATF parser
  TEZ-2701. Add time at which container was allocated to attempt
  TEZ-2683. TestHttpConnection::testAsyncHttpConnectionInterrupt fails in certain environments.
  TEZ-2692. bugfixes & enhancements related to job parser and analyzer.
  TEZ-2663. SessionNotRunning exceptions are wrapped in a ServiceException from a dying AM.
  TEZ-2630. TezChild receives IP address instead of FQDN.
  TEZ-2684. ShuffleVertexManager.parsePartitionStats throws IllegalStateException: Stats should be initialized.
  TEZ-2172. FetcherOrderedGrouped using List to store InputAttemptIdentifier can lead to some inefficiency during remove() operation.
  TEZ-2613. Fetcher(unordered) using List to store InputAttemptIdentifier can lead to some inefficiency during remove() operation.
  TEZ-2645. Provide standard analyzers for job analysis.
  TEZ-2627. Support for Tez Job Priorities.
  TEZ-2623. Fix module dependencies related to hadoop-auth.
  TEZ-2464. Move older releases to dist archive.
  TEZ-2239. Update Tez UI docs to explain how to configure history url for YARN.