@@ -1857,6 +1857,10 @@ public class DAGAppMaster extends AbstractService {
   }
 
 
+  private void initiateStop() {
+    taskSchedulerEventHandler.initiateStop();
+  }
+
   @Override
   public void serviceStop() throws Exception {
     if (isSession) {
@@ -1866,6 +1870,8 @@ public class DAGAppMaster extends AbstractService {
       if (this.dagSubmissionTimer != null) {
         this.dagSubmissionTimer.cancel();
       }
+      // release all the held containers before stop services TEZ-2687
+      initiateStop();
       stopServices();
 
       // Given pre-emption, we should delete tez scratch dir only if unregister is
